@@ -1,3 +1,8 @@
+2024-06-01  Dmitry Gutov  <dmitry@gutov.dev>
+
+	* tramp.el (tramp-handle-shell-command):
+	Use `async-shell-command-mode' when available.
+
 2024-05-31  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-container.el (tramp-actions-copy-out-of-band)
